--- a/examples/multi-repo-dependency-inventory.yaml
+++ b/examples/multi-repo-dependency-inventory.yaml
@@ -17,25 +17,41 @@ title: "Inventory: Go versions and dependencies across services"
 description: "Collect Go version, module dependencies, and build tool info before migration"
 mode: report
 
-# Multiple repositories to analyze - real public Go projects
-repositories:
-  - url: https://github.com/prometheus/prometheus.git
-    branch: main
+# Repository groups for parallel execution
+# Each group runs in its own sandbox, allowing concurrent analysis
+groups:
+  - name: prometheus
+    repositories:
+      - url: https://github.com/prometheus/prometheus.git
+        branch: main
 
-  - url: https://github.com/grafana/loki.git
-    branch: main
+  - name: loki
+    repositories:
+      - url: https://github.com/grafana/loki.git
+        branch: main
 
-  - url: https://github.com/traefik/traefik.git
-    branch: master
+  - name: traefik
+    repositories:
+      - url: https://github.com/traefik/traefik.git
+        branch: master
 
-  - url: https://github.com/minio/minio.git
-    branch: master
+  - name: minio
+    repositories:
+      - url: https://github.com/minio/minio.git
+        branch: master
 
-  - url: https://github.com/go-gitea/gitea.git
-    branch: main
+  - name: gitea
+    repositories:
+      - url: https://github.com/go-gitea/gitea.git
+        branch: main
 
-  - url: https://github.com/hashicorp/terraform.git
-    branch: main
+  - name: terraform
+    repositories:
+      - url: https://github.com/hashicorp/terraform.git
+        branch: main
+
+# Run up to 3 repositories in parallel (balance speed vs resource usage)
+max_parallel: 3
 
 execution:
   agentic:
